Added tweaks to hero videos

--- a/_factory_heroVideos.html
+++ b/_factory_heroVideos.html
@@ -90,9 +90,13 @@
                         <div>
                             <header>
                                 <h1>How it works</h1>
-                                <p class="pd-hero-video-3-headline">Find out how our innovative software works</p>
+                                <div class="pd-hero-video-3-headline">
+                                    <p><strong>Find out how our innovative software works</strong></p>
+                                </div>
                             </header>
-                            <p class="pd-hero-video-3-subHeadline">Take a video tour of the Scissors app.</p>
+                            <div class="pd-hero-video-3-subHeadline">
+                                <p>Take a video tour of the Scissors app.</p>
+                            </div>
                             <footer class="pd-hero-video-3-cta">
                                 <button type="submit" class="btn btn-info ">
                                     <span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
@@ -124,9 +128,13 @@
                         <div>
                             <header>
                                 <h1>How it works</h1>
-                                <p class="pd-hero-video-4-headline">Find out how our innovative software works</p>
+                                <div class="pd-hero-video-4-headline">
+                                    <p><strong>Find out how our innovative software works</strong></p>
+                                </div>
                             </header>
-                            <p class="pd-hero-video-4-subHeadline">Take a video tour of the Scissors app.</p>
+                            <div class="pd-hero-video-4-subHeadline">
+                                <p>Take a video tour of the Scissors app.</p>
+                            </div>
                             <footer class="pd-hero-video-4-cta">
                                 <button type="submit" class="btn btn-info ">
                                     <span><img src="images/design-assets/icon-arrow-01.svg" alt="arrow icon" width="16" height="16" class="me-1"/></span>Book a demo
@@ -158,9 +166,13 @@
                         <div>
                             <header>
                                 <h1>Recruitment Software</h1>
-                                <p class="pd-hero-video-5-headline">Find out how our innovative software works</p>
+                                <div class="pd-hero-video-5-headline">
+                                    <p><strong>Find out how our innovative software works</strong></p>
+                                </div>
                             </header>
-                            <p class="pd-hero-video-5-subHeadline">Take a video tour of the Scissors app.</p>
+                            <div class="pd-hero-video-5-subHeadline">
+                                <p>Take a video tour of the Scissors app.</p>
+                            </div>
                         </div>                         
                     </div>
                     <div class="align-items-center col-lg-6 col-md-5 d-flex flex-row justify-content-center pt-5 pt-md-0" style="position: relative;">
@@ -203,15 +215,19 @@
                             /images/uploads/hero-scissors-people-working-mob.jpg 820w" sizes="(max-width: 600px) 100vw, 1800px" src="/images/uploads/hero-scissors-people-working.jpg" class="pd-hero-video-6-image" onload="imageLoadedListener6()"/>
             </picture>
             <div class="pd-hero-video-6-image-overlay"></div>
-            <div class="container flex-grow-1 flex-shrink-0" style="padding-top: 9rem; padding-bottom: 9rem; position: relative;">
+            <div class="container flex-grow-1 flex-shrink-0">
                 <div class="row">
                     <div class="col-md-8">
                         <div>
                             <header>
                                 <h1>Recruitment Software</h1>
-                                <p class="pd-hero-video-6-headline">Find out how our innovative software works</p>
+                                <div class="pd-hero-video-6-headline">
+                                    <p><strong>Find out how our innovative software works</strong></p>
+                                </div>
                             </header>
-                            <p class="pd-hero-video-6-subHeadline">Take a video tour of the Scissors app.</p>
+                            <div class="pd-hero-video-6-subHeadline">
+                                <p>Take a video tour of the Scissors app.</p>
+                            </div>
                         </div>
                         <footer>
                             <div class="pd-hero-video-6-play-outer">
