Made tweaks to heroes so that we could have bold and lighter fonts in the headlines

--- a/_factory_heroes.html
+++ b/_factory_heroes.html
@@ -24,9 +24,13 @@
                     <div class="col-md-4 d-flex flex-column justify-content-center mb-4 mb-md-0 p-3">
                         <header>
                             <h1>Recruitment Software</h1>
-                            <p class="pd-hero-1-headline">An intuitive tool for temp staffers</p>
+                            <div class="pd-hero-1-headline">
+                                <p><strong>An intuitive tool for temp staffers</strong></p>
+                            </div>
                         </header>
-                        <p class="pd-hero-1-subHeadline">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+                        <div class="pd-hero-1-subHeadline">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+                        </div>
                         <footer>
                             <p style="color: white; text-transform: uppercase;">Risk-free trial</p>
                             <div>
@@ -71,10 +75,14 @@
                         <div class="pd-hero-2-headline-outer">
                             <header>
                                 <h1>Recruitment Software</h1>
-                                <p class="pd-hero-2-headline">Take back hours of data entry. Throw away your paper stacks.
-Focus on retaining candidates and clients.</p>
+                                <div class="pd-hero-2-headline">
+                                    <p><strong>Take back hours of data entry. Throw away your paper stacks.
+Focus on retaining candidates and clients.</strong></p>
+                                </div>
                             </header>
-                            <p class="pd-hero-2-subHeadline">Intuitive temporary staffing software, run by recruiters.</p>
+                            <div class="pd-hero-2-subHeadline">
+                                <p>Intuitive temporary staffing software, run by recruiters.</p>
+                            </div>
                             <footer class="pb-4 pd-hero-2-form-outer pt-2">
                                 <form>
                                     <div class="mb-3">
@@ -123,10 +131,14 @@ Focus on retaining candidates and clients.</p>
                         <div class="pd-hero-3-headline-outer">
                             <header>
                                 <h1>Recruitment Software</h1>
-                                <p class="pd-hero-3-headline text-center">Take back hours of data entry. Throw away your paper stacks.
-Focus on retaining candidates and clients.</p>
+                                <div class="pd-hero-3-headline text-center">
+                                    <p><strong>Take back hours of data entry. Throw away your paper stacks.
+Focus on retaining candidates and clients.</strong></p>
+                                </div>
                             </header>
-                            <p class="pd-hero-3-subHeadline">Intuitive temporary staffing software, run by recruiters.</p>
+                            <div class="pd-hero-3-subHeadline">
+                                <p>Intuitive temporary staffing software, run by recruiters.</p>
+                            </div>
                             <footer class="pb-4 pd-hero-3-form-outer pt-2">
                                 <form>
                                     <div class="mb-3">
@@ -175,9 +187,13 @@ Focus on retaining candidates and clients.</p>
                         <div>
                             <header>
                                 <h1>Recruitment Software</h1>
-                                <p class="pd-hero-4-headline">Reduce data entry. Eliminate paperwork. Boost quality time with your customers.</p>
+                                <div class="pd-hero-4-headline">
+                                    <p><strong>Reduce data entry. Eliminate paperwork. Boost quality time with your customers.</strong></p>
+                                </div>
                             </header>
-                            <p class="pd-hero-4-subHeadline">Intuitive temporary staffing software, engineered by recruiters for recruiters.</p>
+                            <div class="pd-hero-4-subHeadline">
+                                <p>Intuitive temporary staffing software, engineered by recruiters for recruiters.</p>
+                            </div>
                             <footer>
                                 <form role="form" class="pd-hero-4-cta"> 
                                     <div> 
@@ -217,9 +233,13 @@ Focus on retaining candidates and clients.</p>
                         <div>
                             <header>
                                 <h1>Recruitment Software</h1>
-                                <p class="pd-hero-5-headline">Reduce data entry. Eliminate paperwork. Boost quality time with your customers.</p>
+                                <div class="pd-hero-5-headline">
+                                    <p><strong>Reduce data entry. Eliminate paperwork. Boost quality time with your customers.</strong></p>
+                                </div>
                             </header>
-                            <p class="pd-hero-5-subHeadline">Intuitive temporary staffing software, engineered by recruiters for recruiters.</p>
+                            <div class="pd-hero-5-subHeadline">
+                                <p>Intuitive temporary staffing software, engineered by recruiters for recruiters.</p>
+                            </div>
                             <footer>
                                 <form role="form" class="pd-hero-5-cta"> 
                                     <div> 
@@ -272,9 +292,13 @@ Focus on retaining candidates and clients.</p>
                         <div>
                             <header>
                                 <h1>Recruitment Software</h1>
-                                <p class="pd-hero-6-headline">Take back hours of data entry. Throw away your paper stacks. Focus on retaining candidates and clients.</p>
+                                <div class="pd-hero-6-headline">
+                                    <p><strong>Take back hours of data entry. Throw away your paper stacks. Focus on retaining candidates and clients.</strong></p>
+                                </div>
                             </header>
-                            <p class="pd-hero-6-subHeadline">Intuitive temporary staffing software, engineered by recruiters for recruiters.</p>
+                            <div class="pd-hero-6-subHeadline">
+                                <p>Intuitive temporary staffing software, engineered by recruiters for recruiters.</p>
+                            </div>
                             <footer>
                                 <form role="form" class="pd-hero-6-cta"> 
                                     <div> 
@@ -302,9 +326,13 @@ Focus on retaining candidates and clients.</p>
                         <div>
                             <header>
                                 <h1>Recruitment Software</h1>
-                                <p class="pd-hero-7-headline">Take back hours of data entry. Throw away your paper stacks. Focus on retaining candidates and clients.</p>
+                                <div class="pd-hero-7-headline">
+                                    <p><strong>Take back hours of data entry. Throw away your paper stacks. Focus on retaining candidates and clients.</strong></p>
+                                </div>
                             </header>
-                            <p class="pd-hero-7-subHeadline">Intuitive temporary staffing software, engineered by recruiters for recruiters.</p>
+                            <div class="pd-hero-7-subHeadline">
+                                <p>Intuitive temporary staffing software, engineered by recruiters for recruiters.</p>
+                            </div>
                             <footer>
                                 <form role="form" class="pd-hero-7-cta"> 
                                     <div> 
@@ -337,9 +365,13 @@ Focus on retaining candidates and clients.</p>
                         <div>
                             <header>
                                 <h1>Recruitment Software</h1>
-                                <p class="pd-hero-8-headline">Take back hours of data entry. Throw away your paper stacks. Focus on retaining candidates and clients.</p>
+                                <div class="pd-hero-8-headline">
+                                    <p><strong>Take back hours of data entry. Throw away your paper stacks. Focus on retaining candidates and clients.</strong></p>
+                                </div>
                             </header>
-                            <p class="pd-hero-8-subHeadline">Intuitive temporary staffing software, engineered by recruiters for recruiters.</p>
+                            <div class="pd-hero-8-subHeadline">
+                                <p>Intuitive temporary staffing software, engineered by recruiters for recruiters.</p>
+                            </div>
                             <footer>
                                 <form role="form" class="pd-hero-8-cta"> 
                                     <div> 
