Added people cards

--- a/index-4.html
+++ b/index-4.html
@@ -13,6 +13,7 @@
         <!-- Custom styles for this template -->
         <link rel="stylesheet" href="blocks.css">
         <link href="style.css" rel="stylesheet">
+        <link href="/assets/css/glide.core.min.css" rel="stylesheet">
     </head>
     <body>
         <section id="pd-topBar-7" class="pd-topBar-7" style="background: #f7f7f7;">
@@ -128,8 +129,8 @@
                     <div class="col-md-8">
                         <div>
                             <header>
-                                <h1 style="background: #17A9E6;">Recruitment Software</h1>
-                                <p class="pd-hero-6-headline">Take back hours of data entry. Throw away your paper stacks. Focus on retaining candidates and clients.</p>
+                                <h1>Recruitment Software</h1>
+                                <p class="pd-hero-6-headline"><strong>Take back hours of data entry. Throw away your paper stacks. Focus on retaining candidates and clients.</strong></p>
                             </header>
                             <p class="pd-hero-6-subHeadline">Intuitive temporary staffing software, run by recruiters.</p>
                             <footer>
@@ -147,12 +148,13 @@
                 </div>
             </div>
         </section>
-        <section class="pg-empty-placeholder" style="height: 800px;"></section>
         <!-- Bootstrap core JavaScript
     ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
         <script src="assets/js/popper.min.js"></script>
         <script src="bootstrap/js/bootstrap.min.js"></script>
         <script src="/assets/js/functions.js"></script>
+        <script src="/assets/js/glide.min.js"></script>
+        <script src="/assets/js/functions-sliders.js"></script>
     </body>
 </html>
