--- a/_factory_specials.html
+++ b/_factory_specials.html
@@ -18,11 +18,11 @@
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-specials-1</p>
             </div>
         </section>
-        <section class="pb-5 pd-specials-1 pt-5">
+        <section class="pb-5 pd-specials-1 pt-5" id="pd-specials-roles">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-9 pe-0 ps-0">
-                        <div class="pd-specials-1-card">
+                    <div class="col-lg-9 pe-0 ps-0" style="position: relative;">
+                        <div class="pd-specials-1-card show" id="pd-special-1-1">
                             <header>
                                 <img src="images/uploads/avatar-woman-1.svg" alt="image of business owner" width="100" height="100">
                                 <div class="ps-3">
@@ -42,15 +42,114 @@
                                     <li>Sub Feature 3</li>                                     
                                 </ul>
                             </div>
+                        </div>
+                        <div class="pd-specials-1-card" id="pd-special-1-2">
+                            <header>
+                                <img alt="image of business owner" width="100" height="100" src="images/uploads/avatar-man-2.svg">
+                                <div class="ps-3">
+                                    <h3>Administrator</h3>
+                                    <div class="pd-specials-1-headline">
+                                        <p><strong>Sed tincidunt feugiat aliquam. Sed vel blandit nibh, nec ornare elit.&nbsp;</strong></p>
+                                    </div>
+                                </div>
+                            </header>
+                            <div class="pd-specials-1-card-body">
+                                <p>Donec nec lorem et lorem fermentum dictum at at lorem. Mauris faucibus commodo dapibus. Proin metus dui, blandit eget suscipit in, laoreet nec lorem. Vivamus id bibendum dolor. Nulla vehicula tristique lorem eu pulvinar.&nbsp;</p>
+                            </div>
+                            <div class="pd-specials-1-bullet-outer">
+                                <ul> 
+                                    <li>Sub Feature 1</li>                                     
+                                    <li>Sub Feature 2</li>                                     
+                                    <li>Sub Feature 3</li>
+                                    <li>Sub Feature 4</li>
+                                    <li>Sub Feature 5</li>
+                                    <li>Sub Feature 6</li>                                     
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="pd-specials-1-card" id="pd-special-1-3">
+                            <header>
+                                <img alt="image of business owner" width="100" height="100" src="images/uploads/avatar-man-1.svg">
+                                <div class="ps-3">
+                                    <h3>Recruiter</h3>
+                                    <div class="pd-specials-1-headline">
+                                        <p><strong>Nulla at tortor scelerisque, faucibus libero sed, porttitor risus. Aliquam purus nunc, pharetra viverra diam eget</strong></p>
+                                    </div>
+                                </div>
+                            </header>
+                            <div class="pd-specials-1-card-body">
+                                <p>Donec nec lorem et lorem fermentum dictum at at lorem. Mauris faucibus commodo dapibus. Proin metus dui, blandit eget suscipit in, laoreet nec lorem. Vivamus id bibendum dolor. Nulla vehicula tristique lorem eu pulvinar.&nbsp;</p>
+                            </div>
+                            <div class="pd-specials-1-bullet-outer">
+                                <ul> 
+                                    <li>Sub Feature 1</li>                                     
+                                    <li>Sub Feature 2</li>                                     
+                                    <li>Sub Feature 3</li>
+                                    <li>Sub Feature 4</li>
+                                    <li>Sub Feature 5</li>                                     
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="pd-specials-1-card" id="pd-special-1-4">
+                            <header>
+                                <img alt="image of business owner" width="100" height="100" src="images/uploads/avatar-woman-4.svg">
+                                <div class="ps-3">
+                                    <h3>Client</h3>
+                                    <div class="pd-specials-1-headline">
+                                        <p><strong>Mauris eget ante et arcu dapibus gravida. Pellentesque sit amet lectus eget arcu tristique laoreet. Ut et ullamcorper felis</strong></p>
+                                    </div>
+                                </div>
+                            </header>
+                            <div class="pd-specials-1-card-body">
+                                <p>Donec nec lorem et lorem fermentum dictum at at lorem. Mauris faucibus commodo dapibus. Proin metus dui, blandit eget suscipit in, laoreet nec lorem. Vivamus id bibendum dolor. Nulla vehicula tristique lorem eu pulvinar.&nbsp;</p>
+                            </div>
+                            <div class="pd-specials-1-bullet-outer">
+                                <ul> 
+                                    <li>Sub Feature 1</li>                                     
+                                    <li>Sub Feature 2</li>                                     
+                                    <li>Sub Feature 3</li>
+                                    <li>Sub Feature 4</li>
+                                    <li>Sub Feature 5</li>
+                                    <li>Sub Feature 6</li>
+                                    <li>Sub Feature 7</li>
+                                    <li>Sub Feature 8</li>                                     
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="pd-specials-1-card" id="pd-special-1-5">
+                            <header>
+                                <img alt="image of business owner" width="100" height="100" src="images/uploads/avatar-man-3.svg">
+                                <div class="ps-3">
+                                    <h3>Client</h3>
+                                    <div class="pd-specials-1-headline">
+                                        <p><strong>Phasellus tempor at magna vel pulvinar. Aliquam tincidunt, augue in sollicitudin varius, dui ipsum gravida est, sit amet pharetra ipsum lectus non nulla</strong></p>
+                                    </div>
+                                </div>
+                            </header>
+                            <div class="pd-specials-1-card-body">
+                                <p>Donec nec lorem et lorem fermentum dictum at at lorem. Mauris faucibus commodo dapibus. Proin metus dui, blandit eget suscipit in, laoreet nec lorem. Vivamus id bibendum dolor. Nulla vehicula tristique lorem eu pulvinar.&nbsp;</p>
+                            </div>
+                            <div class="pd-specials-1-bullet-outer">
+                                <ul> 
+                                    <li>Sub Feature 1</li>                                     
+                                    <li>Sub Feature 2</li>                                     
+                                    <li>Sub Feature 3</li>
+                                    <li>Sub Feature 4</li>
+                                    <li>Sub Feature 5</li>
+                                    <li>Sub Feature 6</li>
+                                    <li>Sub Feature 7</li>
+                                    <li>Sub Feature 8</li>                                     
+                                </ul>
+                            </div>
                         </div>                                                  
                     </div>
                     <div class="col-lg-3 pe-0 ps-0">
                         <div class="pd-specials-1-buttons-outer">
-                            <a href="#" name="anchor" class="pd-specials-1-button"><img src="images/uploads/avatar-woman-1.svg" alt="image of business owner" width="40" height="40"><p>Owner</p></a>
-                            <a href="#" name="anchor" class="pd-specials-1-button"><img alt="image of business owner" width="40" height="40" src="images/uploads/avatar-man-2.svg"><p>Administrator</p></a>
-                            <a href="#" name="anchor" class="pd-specials-1-button"><img alt="image of business owner" width="40" height="40" src="images/uploads/avatar-man-1.svg"><p>Recruiter</p></a>
-                            <a href="#" name="anchor" class="pd-specials-1-button"><img alt="image of business owner" width="40" height="40" src="images/uploads/avatar-woman-4.svg"><p>Client</p></a>
-                            <a href="#" name="anchor" class="pd-specials-1-button"><img alt="image of business owner" width="40" height="40" src="images/uploads/avatar-man-3.svg"><p>Temp Worker</p></a>
+                            <a href="#" name="anchor" class="pd-specials-1-button show" data-pd-special-1="pd-special-1-1"><img src="images/uploads/avatar-woman-1.svg" alt="image of business owner" width="40" height="40"><p>Owner</p></a>
+                            <a href="#" name="anchor" class="pd-specials-1-button" data-pd-special-1="pd-special-1-2"><img alt="image of business owner" width="40" height="40" src="images/uploads/avatar-man-2.svg"><p>Administrator</p></a>
+                            <a href="#" name="anchor" class="pd-specials-1-button" data-pd-special-1="pd-special-1-3"><img alt="image of business owner" width="40" height="40" src="images/uploads/avatar-man-1.svg"><p>Recruiter</p></a>
+                            <a href="#" name="anchor" class="pd-specials-1-button" data-pd-special-1="pd-special-1-4"><img alt="image of business owner" width="40" height="40" src="images/uploads/avatar-woman-4.svg"><p>Client</p></a>
+                            <a href="#" name="anchor" class="pd-specials-1-button" data-pd-special-1="pd-special-1-5"><img alt="image of business owner" width="40" height="40" src="images/uploads/avatar-man-3.svg"><p>Temp Worker</p></a>
                         </div>                                                  
                     </div>
                 </div>
