Added new styling for mobile

--- a/_factory_specials.html
+++ b/_factory_specials.html
@@ -141,16 +141,16 @@
                                     <li>Sub Feature 8</li>                                     
                                 </ul>
                             </div>
-                        </div>                                                  
+                        </div>                         
                     </div>
                     <div class="col-lg-3 pe-0 ps-0">
                         <div class="pd-specials-1-buttons-outer">
-                            <a href="#" name="anchor" class="pd-specials-1-button show" data-pd-special-1="pd-special-1-1"><img src="images/uploads/avatar-woman-1.svg" alt="image of business owner" width="40" height="40"><p>Owner</p></a>
-                            <a href="#" name="anchor" class="pd-specials-1-button" data-pd-special-1="pd-special-1-2"><img alt="image of business owner" width="40" height="40" src="images/uploads/avatar-man-2.svg"><p>Administrator</p></a>
-                            <a href="#" name="anchor" class="pd-specials-1-button" data-pd-special-1="pd-special-1-3"><img alt="image of business owner" width="40" height="40" src="images/uploads/avatar-man-1.svg"><p>Recruiter</p></a>
-                            <a href="#" name="anchor" class="pd-specials-1-button" data-pd-special-1="pd-special-1-4"><img alt="image of business owner" width="40" height="40" src="images/uploads/avatar-woman-4.svg"><p>Client</p></a>
-                            <a href="#" name="anchor" class="pd-specials-1-button" data-pd-special-1="pd-special-1-5"><img alt="image of business owner" width="40" height="40" src="images/uploads/avatar-man-3.svg"><p>Temp Worker</p></a>
-                        </div>                                                  
+                            <a href="#" name="anchor" class="pd-specials-1-button show" data-pd-special-one="pd-special-1-1"><img src="images/uploads/avatar-woman-1.svg" alt="image of business owner" width="40" height="40"><p>Owner</p></a>
+                            <a href="#" name="anchor" class="pd-specials-1-button" data-pd-special-one="pd-special-1-2"><img alt="image of business owner" width="40" height="40" src="images/uploads/avatar-man-2.svg"><p>Administrator</p></a>
+                            <a href="#" name="anchor" class="pd-specials-1-button" data-pd-special-one="pd-special-1-3"><img alt="image of business owner" width="40" height="40" src="images/uploads/avatar-man-1.svg"><p>Recruiter</p></a>
+                            <a href="#" name="anchor" class="pd-specials-1-button" data-pd-special-one="pd-special-1-4"><img alt="image of business owner" width="40" height="40" src="images/uploads/avatar-woman-4.svg"><p>Client</p></a>
+                            <a href="#" name="anchor" class="pd-specials-1-button" data-pd-special-one="pd-special-1-5"><img alt="image of business owner" width="40" height="40" src="images/uploads/avatar-man-3.svg"><p>Temp Worker</p></a>
+                        </div>                         
                     </div>
                 </div>
             </div>
@@ -165,7 +165,8 @@
         <!-- Bootstrap core JavaScript
     ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
-        <script src="assets/js/popper.min.js"></script>
-        <script src="bootstrap/js/bootstrap.min.js"></script>
+        <script src="/assets/js/popper.min.js"></script>
+        <script src="/bootstrap/js/bootstrap.min.js"></script>
+        <script src="/assets/js/functions-specials-1.js"></script>
     </body>
 </html>
