--- a/_factory_specials.html
+++ b/_factory_specials.html
@@ -21,11 +21,11 @@
         <section class="pb-5 pd-specials-1 pt-5" id="pd-specials-roles">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-9 pe-0 ps-0" style="position: relative;">
+                    <div class="col-lg-9 pd-specials-1-card-col pe-2 pe-sm-0 ps-2 ps-sm-0">
                         <div class="pd-specials-1-card show" id="pd-special-1-1">
                             <header>
                                 <img src="images/uploads/avatar-woman-1.svg" alt="image of business owner" width="100" height="100">
-                                <div class="ps-3">
+                                <div class=" ps-sm-3">
                                     <h3>Business Owner</h3>
                                     <div class="pd-specials-1-headline">
                                         <p><strong>In sed maximus dui. Fusce a orci sed magna volutpat suscipit at et tellus</strong></p>
@@ -143,7 +143,7 @@
                             </div>
                         </div>                         
                     </div>
-                    <div class="col-lg-3 pe-0 ps-0">
+                    <div class="col-lg-3 pd-specials-1-nav-col pe-0 ps-0">
                         <div class="pd-specials-1-buttons-outer">
                             <a href="#" name="anchor" class="pd-specials-1-button show" data-pd-special-one="pd-special-1-1"><img src="images/uploads/avatar-woman-1.svg" alt="image of business owner" width="40" height="40"><p>Owner</p></a>
                             <a href="#" name="anchor" class="pd-specials-1-button" data-pd-special-one="pd-special-1-2"><img alt="image of business owner" width="40" height="40" src="images/uploads/avatar-man-2.svg"><p>Administrator</p></a>
