--- a/_factory_specials.html
+++ b/_factory_specials.html
@@ -11,6 +11,7 @@
         <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <!-- Custom styles for this template -->
         <link href="style.css" rel="stylesheet">
+        <link href="/assets/css/glide.core.min.css" rel="stylesheet">
     </head>
     <body>
         <section class="pb-5 pt-5" style="position: relative;">
@@ -21,12 +22,65 @@
         <section class="pb-5 pd-specials-1 pt-5" id="pd-specials-roles">
             <div class="container">
                 <div class="row">
+                    <div class="col-12 pe-0 ps-0">
+                        <div class="glide" data-glide='{"type": "carousel", 
+                            "startAt": 0, 
+                            "perView": 1,
+                            "breakpoints": {
+								"340": {"peek": 0,
+										"perView": 1},
+                                "380": {"peek": 40,
+										"perView": 1},
+                                "420": {"peek": 58,
+										"perView": 1},
+								"500": {"peek": 70,
+										"perView": 1},
+								"540": {"peek": 100,
+										"perView": 1},
+                                "575": {"peek": 120,
+										"perView": 1},
+								"767": {"peek": 0,
+										"perView": 2},
+								"992": {"peek": 55,
+										"perView": 2}
+                            }}'>
+                            <div class="glide__track" data-glide-el="track">
+                                <ul class="glide__slides">
+                                    <li>
+                                        <a href="#" name="anchor" class="pd-specials-1-button-mobile" data-pd-special-one="pd-special-1-1"><img src="images/uploads/avatar-woman-1.svg" alt="image of woman" width="40" height="40"><div>
+                                                <p>Owner</p>
+                                            </div></a>
+                                    </li>
+                                    <li>
+                                        <a href="#" name="anchor" class="pd-specials-1-button-mobile" data-pd-special-one="pd-special-1-2"><img alt="image of woman" width="40" height="40" src="images/uploads/avatar-man-2.svg"><div>
+                                                <p>Administrator</p>
+                                            </div></a>
+                                    </li>
+                                    <li>
+                                        <a href="#" name="anchor" class="pd-specials-1-button-mobile" data-pd-special-one="pd-special-1-3"><img alt="image of woman" width="40" height="40" src="images/uploads/avatar-man-1.svg"><div>
+                                                <p>Recruiter</p>
+                                            </div></a>
+                                    </li>
+                                    <li>
+                                        <a href="#" name="anchor" class="pd-specials-1-button-mobile" data-pd-special-one="pd-special-1-4"><img alt="image of woman" width="40" height="40" src="images/uploads/avatar-woman-4.svg"><div>
+                                                <p>Client</p>
+                                            </div></a>
+                                    </li>
+                                    <li>
+                                        <a href="#" name="anchor" class="pd-specials-1-button-mobile" data-pd-special-one="pd-special-1-5"><img alt="image of woman" width="40" height="40" src="images/uploads/avatar-man-3.svg"><div>
+                                                <p>Temp Worker</p>
+                                            </div></a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>                         
+                    </div>
                     <div class="col-lg-9 pd-specials-1-card-col pe-2 pe-sm-0 ps-2 ps-sm-0">
                         <div class="pd-specials-1-card show" id="pd-special-1-1">
                             <header>
                                 <img src="images/uploads/avatar-woman-1.svg" alt="image of business owner" width="100" height="100">
                                 <div class=" ps-sm-3">
-                                    <h3>Business Owner</h3>
+                                    <h3>Owner</h3>
                                     <div class="pd-specials-1-headline">
                                         <p><strong>In sed maximus dui. Fusce a orci sed magna volutpat suscipit at et tellus</strong></p>
                                     </div>
@@ -46,9 +100,9 @@
                         <div class="pd-specials-1-card" id="pd-special-1-2">
                             <header>
                                 <img alt="image of business owner" width="100" height="100" src="images/uploads/avatar-man-2.svg">
-                                <div class="ps-3">
+                                <div class=" ps-sm-3">
                                     <h3>Administrator</h3>
-                                    <div class="pd-specials-1-headline">
+                                    <div class=" pd-specials-1-headline">
                                         <p><strong>Sed tincidunt feugiat aliquam. Sed vel blandit nibh, nec ornare elit.&nbsp;</strong></p>
                                     </div>
                                 </div>
@@ -70,7 +124,7 @@
                         <div class="pd-specials-1-card" id="pd-special-1-3">
                             <header>
                                 <img alt="image of business owner" width="100" height="100" src="images/uploads/avatar-man-1.svg">
-                                <div class="ps-3">
+                                <div class=" ps-sm-3">
                                     <h3>Recruiter</h3>
                                     <div class="pd-specials-1-headline">
                                         <p><strong>Nulla at tortor scelerisque, faucibus libero sed, porttitor risus. Aliquam purus nunc, pharetra viverra diam eget</strong></p>
@@ -93,7 +147,7 @@
                         <div class="pd-specials-1-card" id="pd-special-1-4">
                             <header>
                                 <img alt="image of business owner" width="100" height="100" src="images/uploads/avatar-woman-4.svg">
-                                <div class="ps-3">
+                                <div class=" ps-sm-3">
                                     <h3>Client</h3>
                                     <div class="pd-specials-1-headline">
                                         <p><strong>Mauris eget ante et arcu dapibus gravida. Pellentesque sit amet lectus eget arcu tristique laoreet. Ut et ullamcorper felis</strong></p>
@@ -119,8 +173,8 @@
                         <div class="pd-specials-1-card" id="pd-special-1-5">
                             <header>
                                 <img alt="image of business owner" width="100" height="100" src="images/uploads/avatar-man-3.svg">
-                                <div class="ps-3">
-                                    <h3>Client</h3>
+                                <div class=" ps-sm-3">
+                                    <h3>Temp Worker</h3>
                                     <div class="pd-specials-1-headline">
                                         <p><strong>Phasellus tempor at magna vel pulvinar. Aliquam tincidunt, augue in sollicitudin varius, dui ipsum gravida est, sit amet pharetra ipsum lectus non nulla</strong></p>
                                     </div>
@@ -160,13 +214,13 @@
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-specials-2</p>
             </div>
         </section>
-        <div class="container">
-</div>
         <!-- Bootstrap core JavaScript
     ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
         <script src="/assets/js/popper.min.js"></script>
         <script src="/bootstrap/js/bootstrap.min.js"></script>
+        <script src="/assets/js/glide.min.js"></script>
+        <script src="/assets/js/functions-sliders.js"></script>
         <script src="/assets/js/functions-specials-1.js"></script>
     </body>
 </html>
