Added mobile slider

--- a/_factory_specials.html
+++ b/_factory_specials.html
@@ -22,7 +22,7 @@
         <section class="pb-5 pd-specials-1 pt-5" id="pd-specials-roles">
             <div class="container">
                 <div class="row">
-                    <div class="col-12 pe-0 ps-0">
+                    <div class="col-12 pd-specials-1-nav-mobile-col pe-0 ps-0">
                         <div class="glide" data-glide='{"type": "carousel", 
                             "startAt": 0, 
                             "perView": 1,
@@ -47,7 +47,7 @@
                             <div class="glide__track" data-glide-el="track">
                                 <ul class="glide__slides">
                                     <li>
-                                        <a href="#" name="anchor" class="pd-specials-1-button-mobile" data-pd-special-one="pd-special-1-1"><img src="images/uploads/avatar-woman-1.svg" alt="image of woman" width="40" height="40"><div>
+                                        <a href="#" name="anchor" class="pd-specials-1-button-mobile show" data-pd-special-one="pd-special-1-1"><img src="images/uploads/avatar-woman-1.svg" alt="image of woman" width="40" height="40"><div>
                                                 <p>Owner</p>
                                             </div></a>
                                     </li>
