transformed mobile buttons for pd-special-1 into anchors

--- a/_factory_specials.html
+++ b/_factory_specials.html
@@ -47,44 +47,29 @@
                             <div class="glide__track" data-glide-el="track">
                                 <ul class="glide__slides">
                                     <li>
-                                        <button name="anchor" class="pd-specials-1-button-mobile show" data-pd-special-one="pd-special-1-1">
-                                            <img src="images/uploads/avatar-woman-1.svg" alt="image of woman" width="40" height="40">
-                                            <div>
+                                        <a name="anchor" class="pd-specials-1-button-mobile show" data-pd-special-one="pd-special-1-1"> <img src="images/uploads/avatar-woman-1.svg" alt="image of woman" width="40" height="40"> <div>
                                                 <p>Owner</p>
-                                            </div>
-                                        </button>
+                                            </div> </a>
                                     </li>
                                     <li>
-                                        <button name="anchor" class="pd-specials-1-button-mobile" data-pd-special-one="pd-special-1-2">
-                                            <img alt="image of woman" width="40" height="40" src="images/uploads/avatar-man-2.svg">
-                                            <div>
+                                        <a name="anchor" class="pd-specials-1-button-mobile" data-pd-special-one="pd-special-1-2"> <img alt="image of woman" width="40" height="40" src="images/uploads/avatar-man-2.svg"> <div>
                                                 <p>Administrator</p>
-                                            </div>
-                                        </button>
+                                            </div> </a>
                                     </li>
                                     <li>
-                                        <button name="anchor" class="pd-specials-1-button-mobile" data-pd-special-one="pd-special-1-3">
-                                            <img alt="image of woman" width="40" height="40" src="images/uploads/avatar-man-1.svg">
-                                            <div>
+                                        <a name="anchor" class="pd-specials-1-button-mobile" data-pd-special-one="pd-special-1-3"> <img alt="image of woman" width="40" height="40" src="images/uploads/avatar-man-1.svg"> <div>
                                                 <p>Recruiter</p>
-                                            </div>
-                                        </button>
+                                            </div> </a>
                                     </li>
                                     <li>
-                                        <button name="anchor" class="pd-specials-1-button-mobile" data-pd-special-one="pd-special-1-4">
-                                            <img alt="image of woman" width="40" height="40" src="images/uploads/avatar-woman-4.svg">
-                                            <div>
+                                        <a name="anchor" class="pd-specials-1-button-mobile" data-pd-special-one="pd-special-1-4"> <img alt="image of woman" width="40" height="40" src="images/uploads/avatar-woman-4.svg"> <div>
                                                 <p>Client</p>
-                                            </div>
-                                        </button>
+                                            </div> </a>
                                     </li>
                                     <li>
-                                        <button name="anchor" class="pd-specials-1-button-mobile" data-pd-special-one="pd-special-1-5">
-                                            <img alt="image of woman" width="40" height="40" src="images/uploads/avatar-man-3.svg">
-                                            <div>
+                                        <a name="anchor" class="pd-specials-1-button-mobile" data-pd-special-one="pd-special-1-5"> <img alt="image of woman" width="40" height="40" src="images/uploads/avatar-man-3.svg"> <div>
                                                 <p>Temp Worker</p>
-                                            </div>
-                                        </button>
+                                            </div> </a>
                                     </li>
                                 </ul>
                             </div>
